# ChangeLog for net-misc/memcached
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/memcached/ChangeLog,v 1.83 2009/05/14 23:14:17 robbat2 Exp $

*memcached-1.3.3-r1 (14 May 2009)

  14 May 2009; Robin H. Johnson <robbat2@gentoo.org>
  +memcached-1.3.3-r1.ebuild, metadata.xml:
  Bug 268938: Support the optional slab reassignment feature as described at
  http://code.google.com/p/memcached/wiki/MemcachedSlabAllocator.

  13 Apr 2009; Robin H. Johnson <robbat2@gentoo.org> memcached-1.2.8.ebuild,
  memcached-1.3.3.ebuild:
  Bug #265921, fix -Werror.

*memcached-1.3.3 (12 Apr 2009)
*memcached-1.2.8 (12 Apr 2009)

  12 Apr 2009; Robin H. Johnson <robbat2@gentoo.org>
  +memcached-1.2.8.ebuild, +memcached-1.3.3.ebuild:
  Version bump per bug #263344.

  17 Nov 2008; Diego E. Pettenò <flameeyes@gentoo.org>
  files/memcached-1.2.2-p-threads.patch:
  Fix patch with absolute paths.

  15 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  memcached-1.2.6.ebuild:
  ppc stable, bug #246279

  15 Nov 2008; Raúl Porcel <armin76@gentoo.org> memcached-1.2.6.ebuild:
  alpha/arm/ia64/sparc/x86 stable wrt #246279

  13 Nov 2008; Jeremy Olexa <darkside@gentoo.org> memcached-1.2.6.ebuild:
  amd64 stable, bug #246279

  12 Nov 2008; Brent Baude <ranger@gentoo.org> memcached-1.2.6.ebuild:
  stable ppc64, bug 246279

  12 Nov 2008; Jeroen Roovers <jer@gentoo.org> memcached-1.2.6.ebuild:
  Stable for HPPA (bug #246279).

*memcached-1.3.0 (11 Nov 2008)

  11 Nov 2008; Robin H. Johnson <robbat2@gentoo.org>
  +memcached-1.3.0.ebuild:
  Version bump.

  27 Sep 2008; Raúl Porcel <armin76@gentoo.org> memcached-1.2.5.ebuild:
  arm stable wrt #223371

*memcached-1.2.6 (01 Aug 2008)

  01 Aug 2008; Caleb Tennis <caleb@gentoo.org> +files/1.2.6/conf,
  +files/1.2.6/init, +memcached-1.2.6.ebuild:
  bump to new version

  26 May 2008; Raúl Porcel <armin76@gentoo.org> memcached-1.2.5.ebuild:
  alpha/ia64/sparc stable wrt #223371
