@@ -4,6 +4,8 @@ AUX 1.2.5/conf 811 RMD160 816215be39e3bdb3163df90c88e864337d47e37a SHA1 8a38d032
 AUX 1.2.5/init 2122 RMD160 5fd5deba348febbf2d5396404225486d0d0edb41 SHA1 2a0309dbdaed5ce2aef09fe8ab9e5125ee98e9b2 SHA256 27cfbb1be26725327bd3abc9e7702ff34b805c6361221ecb4d21b51f037db4c0
 AUX 1.2.6/conf 811 RMD160 2c8c13c4f2d112e4c1925ae87d50be50cfb29351 SHA1 3c0cb7c59553bf05952341feccd11f1dcdccc149 SHA256 7afc0dfb7fb8dbc47c6b41f56fa62f90fec53bef1b3049d3b2a307856bdb984a
 AUX 1.2.6/init 2122 RMD160 187519a373a768deec455775d073b8d3b704a1c4 SHA1 2bddef6ebc95c07b04d4f67c3070393f52961fa4 SHA256 d1f3485e52ed27b766acecfd21028ff4c1c202d06a3403a9625e3441b2071563
+AUX 1.3.3/conf 896 RMD160 19e6a55b77c9e9b48dec0185e70015ed63809bbf SHA1 287af1e355054c3ef53041ac5196e771caf97dd0 SHA256 d8648ea385035632b209acfae27b0a46ec446e58d37de43874d2a41ba13b6923
+AUX 1.3.3/init 2320 RMD160 d4faf07df1939a1f79189c67cc45daedc38e6a07 SHA1 a07e8aa811914ef86577caebd245d69bbe82defd SHA256 e4b6415c5501963d2ce421aab9d595736091bc895b8f3762e746593f7d736792
 AUX memcached-1.2.2-fbsd.patch 328 RMD160 669542854d9cbca5495db2ac2fe280502dbe96e6 SHA1 c783c1f1b89da8f61f170641dcf4d0987b9c3b08 SHA256 a0e91bd63a01a1a3361b0465fb9c63d091627d8714f3f64c853723b31da54b2f
 AUX memcached-1.2.2-p-threads.patch 869 RMD160 1b1673479b543515b67a284bfd38876f235e5fba SHA1 6345377ac93ef302386abae8e7ab9c273a4e3a98 SHA256 be6066ca09d2c871d6f0691cc101684512bf7a16c5e823412ed8a98213048e61
 DIST memcached-1.2.4.tar.gz 363196 RMD160 13b20a6a0f01b8b741901ed7555814383324c611 SHA1 97861b538805a55c3b616e87e4173560480d5cef SHA256 33796120ad4e806cf23b8e8b1ecc249cc027f55c9f0b491ed6d4d80a2dc3f8f9
@@ -16,6 +18,7 @@ EBUILD memcached-1.2.5.ebuild 1598 RMD160 b4fbcea843dcbc06ffe2ff1bbd802ff3680763
 EBUILD memcached-1.2.6.ebuild 1597 RMD160 682d5bf788206be153711a9fe185d900de74bd75 SHA1 6501e06b0d9a85baa760eebde6d5f9ca28c58cf4 SHA256 a6aa4c5961c916759a481e47c4b8a99f3fa2c37c07ef914bf805210569260ca9
 EBUILD memcached-1.3.0.ebuild 1598 RMD160 13cd992695f2e949d719bcf78088c56ac540f4ea SHA1 596eb38b69126418a4eee54f99e000345312f99b SHA256 c46ef4124aade9e7bd81225b2ec7bcbcee39e8fe4792bb803d8b71a1d0804027
 EBUILD memcached-1.3.3-r1.ebuild 1778 RMD160 5ea0bf0f696e0c5c982535230cdac2a460321c8d SHA1 b26435ada7ac3df2898aa5d230e5a8b120e700c2 SHA256 a39759d856d7d4ce9afaf74430162c012badb5d31bd6748a05379ee4b61bc640
+EBUILD memcached-1.3.3-r2.ebuild 1742 RMD160 71892f854df1953ae89d040a2cbfcfe186b96617 SHA1 6144c9bc5022438364e978e11a00a16c0098a6c5 SHA256 ec68ff7fc06815224b9a0901325df5310f7ccdd5e2929ccfe30affaad91b8c77
 EBUILD memcached-1.3.3.ebuild 1686 RMD160 0618f8c1ede1cd8699211f715d175ea02e344d57 SHA1 f85975ede29e3f1f29826c26bfec5a6bd51f7335 SHA256 68d9322ab5e5b92ae7c19f89c093fccb39f6f872c54c06d8d8aed754da616606
-MISC ChangeLog 14559 RMD160 a842bff595cafdafe3492c72aad0d81b681c6531 SHA1 dc71477597007395c49b57160ec99f81a133638d SHA256 52bf2c123be32a9a130b07395cf81f07f4d166371a5414487320e62e41a3f77b
+MISC ChangeLog 15032 RMD160 a013d1a1f8afe94f9553b498fb0ccdad78a86541 SHA1 8ff9a4566f28154fde78d8021e1dabce1960af8a SHA256 7304f1e6a89bf77629a026b11aeee39ec2541e24db56d9809e2399039d06f8ce
 MISC metadata.xml 966 RMD160 9da6a32f068f21da2b93ad45b4bba6147644e20a SHA1 a7080fc08dde81c21554beeb89b201d16efe08c1 SHA256 ce8186d4b0926cdc2ac0dcc49a737359b3f08a13396b5dc2cf05bf4a366b242b
